[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/ChoicePanel.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/ThemedPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Overlock-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Node2D" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Hint", "Margin", "Mouse", "Rect", "custom_styles" ]

[node name="Panel" parent="." index="0" instance=ExtResource( 2 )]

[node name="Label" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 360.0
margin_bottom = 260.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "???"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors", "custom_fonts" ]

[node name="YesButton" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 29.0
margin_top = 217.0
margin_right = 91.0
margin_bottom = 268.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Yes"
flat = false
align = 1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="NoButton" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 317.0
margin_top = 217.0
margin_right = 371.0
margin_bottom = 268.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "No"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "custom_fonts" ]

[connection signal="pressed" from="YesButton" to="." method="_on_YesButton_pressed"]

[connection signal="pressed" from="NoButton" to="." method="_on_NoButton_pressed"]


